# repo_query_assistant

./: .dockerignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
docker/: Dockerfile
src/: gpt_chat.py
src/notebooks/: test.ipynb
