[project]
name = "repo_query_assistant"
version = "2024.0.0"
requires-python = ">=3.8"
authors = [
  {name = "Roman Bobrov", email = "roman.bobroff@gmail.com"},
  {name = "Valentin Bugakov", email = "valentinbugakov@gmail.com"},
  {name = "Mikhail Arkhipkin", email = "arkhipkin7@icloud.com"}
]
description = "Studying project using large language models to analyze code repositories"
readme = "README.md"
keywords = ["llm", "repository", "code analysis"]
classifiers = [
  "Programming Language :: Python"
]

[project.urls]
Repository = "https://github.com/romanbobroff/repo_query_assistant.git"

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
extend-include = ["src/notebooks/*.ipynb"]
line-length = 88
indent-width = 4

[tool.ruff.lint]
fixable = ["ALL"]
ignore=[
    'S101', # Use of assert in pytest
    'PT006', # Wrong type for pytest mark parametrize
    'S108', # Omit unsecure usage of tmp/test
    'SIM117' # Single with statement ommited because dag definition
]

extend-select = [
    "N",      # pep8-naming
   "UP",     # pyupgrade
   "S",      # bandit
   "BLE",    # flake8-blind-except
   "C4",     # comprehensions
   "DTZ",    # datetimez
   "FA",     # future-annotations
   "ISC",    # implicit string concat
   "PIE",    # flake8-pie
   "PT",     # flake8-pytest-style
   "SLF",    # flake8-self
   "SIM",    # flake8-simplify
   "ERA",    # eradicate commented out code
   "ISC"     # implicit str concat
]
[tool.ruff.format]
quote-style = "double"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
