[tool.poetry]
name = "repo-query-assistant"
version = "0.1.0"
description = "Studying project using large language models to analyze code repositories"
authors = [
  {name = "Roman Bobrov", email = "roman.bobroff@gmail.com"},
  {name = "Valentin Bugakov", email = "valentinbugakov@gmail.com"},
  {name = "Mikhail Arkhipkin", email = "arkhipkin7@icloud.com"}
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ruff = "^0.3.5"
openai = "^1.16.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
extend-include = ["*.ipynb"]
line-length = 88
indent-width = 4

[tool.ruff.format]
quote-style = "double"